# AIE7_DEMO_DAY

./: .gitignore  Deliverables.md  README.md  pyproject.toml
data/: Ben_&_Jerry's_half_baked_2Twisted_pt_product_summary.txt  Celsius_Peach_Vibe_product_summary.txt  Cheddar_&_sour_cream_Potato_chips_product_summary.txt  Cheetos_Crunchy_xxtra_Flamin'_Hot_product_summary.txt  Cherry_garcia_ice_cream_product_summary.txt  Chocolate_&_peanut_butter_with_fudge_brownies_&_gobs_of_peanut_butter_cookie_dough_half_baked_non-da_product_summary.txt  Chocolate_fudge_brownie_ice_cream_product_summary.txt  Chubby_Hubby_product_summary.txt  Classic_Potato_Chips_product_summary.txt  Coffee_toffee_bar_crunch_ice_cream_with_fudge-covered_toffee_pieces,_coffee_toffee_bar_crunch_product_summary.txt  Cookie_variety_packs_product_summary.txt  Core,_Ice_Cream,_Karamel_Sutra_product_summary.txt  Energy_drink,_cranberry_product_summary.txt  Energy_drink,_plum_twist_product_summary.txt  Fries_Corn_&_Potato_Snacks,_Flamin'_Hot_product_summary.txt  Fruit_Roll-Ups_Variety_Pack_10_Count_product_summary.txt  Fruit_by_the_Foot_Variety_Pack_12_Count_product_summary.txt  Ice_Cream,_Everything_But_The_product_summary.txt  Ice_cream_product_summary.txt  Ice_pops_product_summary.txt  Lay's_Classic_Potato_Chips_10_Ounce_Plastic_Bag_product_summary.txt  Minis_Nacho_Cheese_product_summary.txt  Monster_Energy_product_summary.txt  Monster_product_summary.txt  Nabisco_Mini_Chips_Ahoy_Big_Bag_product_summary.txt  Nabisco_oreo_sandwich_cookies_chocolate_creamsicle_ice_cream_1x15.250_oz_product_summary.txt  (+10 more)
(+34 files in other folders)
