[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Certification_Challenge"
version = "0.1.0"
description = "S.A.V.E. (Simple Autonomous Validation Engine) - AI-powered product validation system"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=0.3.27",
    "langsmith>=0.3.45",
    "langchain-core>=0.3.72",
    "langchain-community==0.3.27",
    "langchain_anthropic==0.3.18",
    "langchain-qdrant>=0.2.0",
    "langchain-openai>=0.2.15",
    "langgraph==0.2.61",
    "ragas==0.2.10",
    "langchain-cohere==0.4.4",
    "cohere>=5.12.0,<5.13.0", 
    "qdrant-client>=1.7.0",
    "pymupdf>=1.24.0",
    "jupyter>=1.1.1",
    "rapidfuzz>=3.0.0",
    "fastapi>=0.115.12",
    "openai>=1.77.0",
    "pydantic>=2.11.4",
    "uvicorn>=0.34.2",
    "tavily-python>=0.5.0",
    "langchain-tavily>=0.2.0",
    "python-multipart>=0.0.12",
    "rank-bm25>=0.2.2",
]
[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
